--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -85,8 +85,8 @@ header {
 
   &.open {
     position: fixed;
-    width: calc(100% - 14%);
-    height: 100%;
+    width: calc(100vw - 14%);
+    height: 100vh;
     background: #5f5f5f;
     padding: 7%;
     top: 0;
@@ -111,12 +111,12 @@ header {
 
     nav {
       display: flex;
-      height: 80%;
+      height: 100vh;
       align-items: center;
-      width: 100%;
+      width: 100vw;
       #navigation {
         flex-direction: column;
-        width: 100%;
+        width: 100vw;;
         li {
           padding: 15px 0;
           a {
