--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -88,7 +88,7 @@ header {
     width: calc(100vw - 14%);
     height: 100vh;
     background: #5f5f5f;
-    padding: 7%;
+    padding: 7% 7% 0 7%;
     top: 0;
     left: 0;
     z-index: 1001;
@@ -111,9 +111,9 @@ header {
 
     nav {
       display: flex;
-      height: 100vh;
+      height: 70vh;
       align-items: center;
-      width: 100vw;
+      width: 100%;
       #navigation {
         flex-direction: column;
         width: 100vw;;
