--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -85,7 +85,7 @@ header {
 
   &.open {
     position: fixed;
-    width: calc(100vw - 14%);
+    width: calc(100vw - 14% - 8px);
     height: 100vh;
     background: #5f5f5f;
     padding: 7% 7% 0 7%;
@@ -94,6 +94,7 @@ header {
     z-index: 1001;
     align-items: baseline;
     flex-direction: column;
+    border: 4px solid transparent;
 
     #logo a {
       background: linear-gradient(#fff, #fff) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), var(--primary-colour), #651fff) border-box;
