--- a/src/styles/components/_portfolio-item.scss
+++ b/src/styles/components/_portfolio-item.scss
@@ -1,15 +1,15 @@
-#portfolio-item {
+// #portfolio-item {
 
-  .gatsby-image-outer-wrapper {
-    margin-bottom: 20px;
-  }
+//   .gatsby-image-outer-wrapper {
+//     margin-bottom: 20px;
+//   }
 
-  .tag {
-    margin-bottom: 0;
-  }
+//   .tag {
+//     margin-bottom: 0;
+//   }
 
-  .Page-title {
-    margin-top: 0;
-    margin-bottom: 40px;
-  }
-}
+//   // .Page-title {
+//   //   margin-top: 0;
+//   //   margin-bottom: 40px;
+//   // }
+// }
