--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -2,11 +2,18 @@
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  margin-top: 2rem;
+  margin-bottom: 0;
+  max-width: 1100px;
   @include breakpoint(medium) {
     grid-gap: 40px;
+    margin-top: 3rem;
+    margin-bottom: 1rem;
   }
   @include breakpoint(large) {
     grid-gap: 60px;
+    margin-top: 6rem;
+    margin-bottom: 1rem;
   }
   li {
     h3 {
