--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -1,11 +1,12 @@
 #services {
   display: grid;
   grid-gap: 30px;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   margin-top: 2rem;
   margin-bottom: 0;
+  grid-template-columns: 1fr;
   max-width: 1100px;
   @include breakpoint(medium) {
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     grid-gap: 40px;
     margin-top: 3rem;
     margin-bottom: 1rem;
