--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -138,7 +138,7 @@ input[type="email"] {
 }
 
 h2 {
-  span {
+  .intro {
     display: block;
     margin: 10px 0;
     @include breakpoint(medium) {
