--- a/src/styles/components/_navigation.scss
+++ b/src/styles/components/_navigation.scss
@@ -1,149 +1,13 @@
-body.block {
-  overflow: hidden;
-  height: 100%;
-  position: fixed;
-  width: 100%;
-}
-
-.navbutton {
-  margin-left: auto;
-  width: 20px;
-  height: 16px;
-  position: relative;
-  transform: rotate(0deg);
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  padding: 0;
-  border: 0 none;
-  background: none;
-  @include breakpoint(medium) {
-    display: none;
-  }
-
-  &:focus {
-    background: none;
-    color: inherit;
-  }
-
-
-  span {
-    display: block;
-    position: absolute;
-    height: 2px;
-    width: 100%;
-    border-radius: 9px;
-    background: var(--black);
-    opacity: 1;
-    left: 0;
-    transform: rotate(0deg);
-    transition: .25s ease-in-out;
-
-    &:nth-child(1) {
-      top: 0px;
-    }
-
-    &:nth-child(2) {
-      top: 9px;
-    }
-
-    &:nth-child(3) {
-      top: 18px;
-    }
-  }
-
-  &.active {
-    span {
-      &:nth-child(1) {
-        top: 9px;
-        transform: rotate(135deg);
-      }
-
-      &:nth-child(2) {
-        opacity: 0;
-        left: -60px;
-      }
-
-      &:nth-child(3) {
-        top: 9px;
-        transform: rotate(-135deg);
-      }
-    }
-  }
-}
-
-.mobile-nav {
-  display: flex;
-  width: 100%;
-  align-items: center;
-}
-
 header {
   display: flex;
   padding-top: 7%;
   padding-bottom: 7%;
-  @include breakpoint(medium) {
-    flex-direction: row;
-    align-items: center;
-  }
-
-  &.open {
-    position: fixed;
-    width: calc(100vw - 14% - 8px);
-    height: 100vh;
-    background: #5f5f5f;
-    padding: 7% 7% 0 7%;
-    top: 0;
-    left: 0;
-    z-index: 1001;
-    align-items: baseline;
-    flex-direction: column;
-    border: 4px solid transparent;
-
-    .logo {
-      background: linear-gradient(#fff, #fff) padding-box, radial-gradient(farthest-corner at var(--x) var(--y), var(--primary-colour), #651fff) border-box;
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-      padding: 0 2px 0 0;
-      box-shadow: none;
-      border: 0 none;
-      &:hover {
-        text-decoration: none;
-        box-shadow: none;
-      }
-    }
-
-    nav {
-      display: flex;
-      height: 70vh;
-      align-items: center;
-      width: 100%;
-      #navigation {
-        flex-direction: column;
-        width: 100vw;;
-        li {
-          padding: 15px 0;
-          a {
-            color: var(--grey);
-            font-size: 2rem;
-          }
-        }
-      }
-    }
-    .navbutton {
-      span {
-        background: white;
-      }
-    }
-  }
+  flex-direction: row;
+  align-items: center;
+  flex-wrap: wrap;
 }
 
 nav {
-  display: none;
-  @include breakpoint(medium) {
-    display: block;
-  }
-
   #navigation {
     margin: 0;
     padding: 0;
@@ -151,22 +15,8 @@ nav {
     display: flex;
 
     li {
-      padding: 10px 10px;
       line-height: 1;
       margin-bottom: 0;
-
-      @include breakpoint(medium) {
-        padding: 10px 8px;
-        &:first-of-type {
-          padding-left: 0;
-        }
-
-        &:last-of-type {
-          padding-right: 0;
-        }
-      }
-
-      @include breakpoint(large) {
         padding: 10px 15px;
         &:first-of-type {
           padding-left: 0;
@@ -175,7 +25,6 @@ nav {
         &:last-of-type {
           padding-right: 0;
         }
-      }
 
       a {
         padding-bottom: 2px;
@@ -213,6 +62,7 @@ nav {
   padding: 0 2px 0 0;
   box-shadow: none;
   border: 0 none;
+  margin-right: 15px;
   &:hover {
     text-decoration: none;
     box-shadow: none;
