--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -22,17 +22,11 @@ body {
 }
 
 #___gatsby {
-  transition: all .2s ease-in-out;
-	border: 3px solid transparent;
-  background: linear-gradient(#FFF, #FFF) padding-box, radial-gradient(farthest-corner at  var(--x) var(--y), var(--primary-colour), rgb(101, 31, 255)) border-box;
   min-height: 100vh;
-  @include breakpoint(medium) {
-    border: 8px solid transparent;
-  }
 }
 
 .container-wrap {
-  min-height: calc(100vh - 8px);
+  min-height: 100vh;
   height: 100%;
   display: grid;
   grid-template-areas: "Header" "Main-content" "Footer";
@@ -41,20 +35,8 @@ body {
   padding-left: 7%;
   padding-right: 7%;
   background: #fff;
-  border-radius: 2px;
-  max-width: 1400px;
   margin: 0px auto;
-  @include breakpoint(medium) {
-    min-height: calc(100vh - 20px);
-  }
 }
-
-// .animated {
-//   -webkit-animation-duration: 250ms;
-//   animation-duration: 250ms;
-//   -webkit-animation-fill-mode: both;
-//   animation-fill-mode: both;
-// }
 
 form {
   margin-top: 50px;
