--- a/src/styles/variables/_typography.scss
+++ b/src/styles/variables/_typography.scss
@@ -13,13 +13,12 @@
   font-size:               calc(1rem + ((1vw - 0.3rem) * 0.2222));
 }
 
-
-h1, h2, h3, h4, h5 {
+.h1, .h2, .h3, .h4, .h5 {
   font-weight: 400;
   line-height: 1.4;
 }
 
-h1 {
+.h1 {
   font-size: 2rem;
   letter-spacing: -1px;
   margin-bottom: 1.5rem;
@@ -29,7 +28,7 @@ h1 {
   }
 }
 
-h2 {
+.h2 {
   font-size: 1.3rem;
   margin-bottom: 1.2rem;
   @include breakpoint(medium) {
@@ -43,7 +42,7 @@ h2 {
   }
 }
 
-h3 {
+.h3 {
   font-size: 1.1rem;
   margin-bottom: 1rem;
   @include breakpoint(medium) {
@@ -56,7 +55,7 @@ h3 {
   }
 }
 
-h4 {
+.h4 {
   font-size: 1.1rem;
   margin-bottom: .8rem;
   @include breakpoint(medium) {
@@ -67,6 +66,22 @@ h4 {
     font-size: 1.3rem;
     margin-bottom: .5rem;
   }
+}
+
+h1 {
+  @extend .h1;
+}
+
+h2 {
+  @extend .h2;
+}
+
+h3 {
+  @extend .h3;
+}
+
+h4 {
+  @extend .h4;
 }
 
 a {
