--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -120,6 +120,9 @@
 	justify-content: center;
 	height: 100%;
 	width: 100%;
+	p {
+		color: white;
+	}
   }
 
 	&.hover &__content {
@@ -153,6 +156,6 @@
 	}
 
 	h3 {
-		margin-bottom: .6rem;
+		margin-bottom: .5rem;
 	}
 }
