--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -120,8 +120,24 @@
 	justify-content: center;
 	height: 100%;
 	width: 100%;
-	p {
+	p, span {
 		color: white;
+	}
+
+	h3 {
+		margin-bottom: 0;
+	}
+
+	span {
+		font-size: .8rem;
+		display: block;
+		margin-bottom: 1.1rem;
+		@include breakpoint(medium) {
+			margin-bottom: 1.4rem;
+		}
+		@include breakpoint(large) {
+			margin-bottom: 1.6rem;
+		}
 	}
   }
 
