changing link colour..... again v3

--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -32,7 +32,7 @@
 	overflow: hidden;
 	transition-property: color;
 	transition-delay: $delay;
-	height: 363px;
+	min-height: 450px;
 
 	&:before,
 	&:after {
