--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -125,7 +125,7 @@
 	color: white;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: flex-end;
 	height: 100%;
 	width: 100%;
 	p, span {
