--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -34,6 +34,10 @@
 	transition-delay: $delay;
 	min-height: 450px;
 
+	&:first-of-type {
+		grid-row: 1 / 3;
+	}
+
 	&:before,
 	&:after {
 		content: '';
@@ -175,5 +179,32 @@
 
 	h3 {
 		margin-bottom: .5rem;
+	}
+}
+
+
+.portfolio-item {
+	> div {
+		min-height: 60vh;
+
+		h1 {
+			margin-bottom: 0;
+		}
+
+		span {
+			display: block;
+			margin-bottom: 2.5rem;
+		}
+
+		p {
+			font-size: 1.6rem;
+    		margin-bottom: 1.6rem;
+			max-width: 70%;
+		}
+	}
+
+	video {
+		width: 100%;
+		height: auto;
 	}
 }
