--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -32,7 +32,10 @@
 	overflow: hidden;
 	transition-property: color;
 	transition-delay: $delay;
-	min-height: 450px;
+	min-height: 250px;
+	@include breakpoint(medium) {
+		min-height: 450px;
+	}
 
 	&:first-of-type {
 		grid-row: 1 / 3;
@@ -179,11 +182,6 @@
 			border-bottom: 0 none;
 		}
 	}
-
-	// h2 {
-	// 	// margin-bottom: .5rem;
-	// 	color: #949494;
-	// }
 }
 
 body.portfolio {
@@ -253,7 +251,9 @@ body.portfolio {
 				padding-right: 7%;
 				z-index: 5;
 				> * {
-					max-width: 70%;
+					@include breakpoint(medium) {
+						max-width: 70%;
+					}
 				}
 		}
 
@@ -270,7 +270,9 @@ body.portfolio {
 		}
 
 		p, img {
-			font-size: 1.6rem;
+			@include breakpoint(medium) {
+				font-size: 1.6rem;
+			}
     		margin-bottom: 2.5rem;
 		}
 	}
@@ -297,7 +299,13 @@ body.portfolio {
 }
 
 .section__services {
-	margin-bottom: 1rem;
+	margin-bottom: 2.5rem;
+    border-bottom: 1px solid var(--grey);
+	padding-bottom: 2.5rem;
+	@include breakpoint(medium) {
+		border-bottom: 0 none;
+		padding-bottom: 0;
+	}
 	h4 {
 		color: #949494;
 	}
