--- a/src/styles/components/_services.scss
+++ b/src/styles/components/_services.scss
@@ -1,18 +1,21 @@
 #services {
   display: grid;
-  grid-gap: 30px;
+  grid-gap: 5rem;
+  grid-row-gap: 2.5rem;
   margin-top: 2rem;
   margin-bottom: 0;
   grid-template-columns: 1fr;
   max-width: 1100px;
   @include breakpoint(medium) {
     grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-    grid-gap: 40px;
+    grid-gap: 5rem;
+    grid-row-gap: 2.5rem;
     margin-top: 3rem;
     margin-bottom: 1rem;
   }
   @include breakpoint(large) {
-    grid-gap: 80px;
+    grid-gap: 5rem;
+    grid-row-gap: 2.5rem;
     margin-top: 4rem;
     margin-bottom: 1rem;
   }
