--- a/src/styles/components/_case-studies.scss
+++ b/src/styles/components/_case-studies.scss
@@ -37,10 +37,6 @@
 		min-height: 450px;
 	}
 
-	&:first-of-type {
-		grid-row: 1 / 3;
-	}
-
 	&:before,
 	&:after {
 		content: '';
@@ -60,6 +56,7 @@
 
 	a {
 		color: inherit;
+		pointer-events: none;
 	}
 
 	&,
